--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-    background-color: #a8e42e;
+    background-color: rgb(233, 233, 233);
 }
 ol, ul {
 	list-style: none;
@@ -50,12 +50,13 @@ table {
 
 /*customized styles*/
 .banner {
-    border-radius: 4px;
-    padding: 0.5% 1%;
-    margin: 0 1%;
+    border-radius: 5px;
+    padding: 1% 1.5%;
+    margin: 0.5%;
     display: flex;
     justify-content: space-between;
-    background-color: #2b2a37;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 2px 4px darkgray;
 }
 
 .nav {
@@ -64,56 +65,55 @@ table {
     justify-content: space-between;
 }
 
-.home-main {
-    border-radius: 4px;
-    margin: 1%;
-    padding: 2%;
-    box-shadow: 0 3px 5px gray;
-    text-align: center;
-    background-image: url('./components/placeholder.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    height: 100vh;
-}
-
-.home-main-banner {
-    text-align: center;
-    margin: 0 0 2%;
-}
-
 .home-body {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 90%;
-    padding: 0 10vw;
+    flex-direction: column;
+    justify-content: center;
+    overflow: auto;
+    padding: 2% 0 5%;
+    margin: 2% 16% 0;
+    background-color: white;
+    box-shadow: 0 2px 4px darkgray;
+    border-radius: 10px;
 }
 
 .home-tile {
-    width: 30%;
-    height: 40%;
-    margin: 0 5%;
-    border-radius: 4px;
-    background-color: #56aebd81;
+    border-bottom-right-radius: 20px;
+    box-shadow: 1px 3px 5px 2px darkgray;
+    background-color: #caf0f8;
+    margin: 2% 30%;
+    padding: 1%;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 
 h1 {
-    color: #e0e0db;
+    color: #03045e;
     font-size: 3rem;
+    text-align: center;
+    margin-bottom: 1%;
 }
 
 h2 {
-    color: #e0e0db;
+    color: #03045e;
     font-size: 2rem;
 }
 
 .links {
-    color: #e0e0db;
+    color: #03045e;
     font-size: 2rem;
     text-decoration: none;
 }
 
 .links:hover {
-    color: #fc2673;
+    color: #0077b6;
+}
+
+.home-tile:hover {
+    background-color: #90e0ef;
 }
