--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -29,9 +29,11 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
-    background-color: rgb(233, 233, 233);
-    font-family: 'Roboto Slab', serif;
+	line-height: 1.1;
+    background-color: #00111c;
+    color: #e1f3ff;
+    font-family: 'Lato', sans-serif;
+    height: 100vh;
 }
 ol, ul {
 	list-style: none;
@@ -47,4 +49,85 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+/*Banner Component Styles*/
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2% 15% 0;
+    padding: 0 2%;
+    background-color: #002137;
+    height: 400px;
+}
+
+/*Bio Component Styles*/
+.me {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15%;
+    padding: 0 2% 1%;
+    background-color: #00253e;
+    height: 400px;
+}
+.me img {
+    max-width: 25%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
+
+}
+.bio {
+    max-width: 70%;
+    font-size: 1.3rem;
+}
+.bio h2 {
+    text-align: center;
+    margin: 2% 0;
+    font-weight: bold;
+}
+/*Qualities Component Styles*/
+.hireMe {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15%;
+    padding: 0 2%;
+    background-color: #002e4e;
+    height: 400px;
+}
+.hireMe img {
+    max-width: 35%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
+}
+.qualities {
+    max-width: 70%;
+    font-size: 1.3rem;
+    line-height: 1.3;
+}
+.qualities h2 {
+    text-align: center;
+    margin: 2% 0;
+    font-weight: bold;
+}
+/*Projects Component Styles*/
+.projects {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15%;
+    padding: 0 2%;
+    background-color: #003356;
+    height: 400px;
+}
+/*TechStack Component Styles*/
+.techStack {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15%;
+    padding: 0 2%;
+    background-color: #003a61;
+    height: 400px;
 }
