--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1.1;
     background-color: #00111c;
-    color: #e1f3ff;
+    color: lightblue;
     font-family: 'Lato', sans-serif;
     height: 100vh;
 }
@@ -85,6 +85,7 @@ table {
     text-align: center;
     margin: 2% 0;
     font-weight: bold;
+    color: white;
 }
 /*Qualities Component Styles*/
 .hireMe {
@@ -109,6 +110,7 @@ table {
     text-align: center;
     margin: 2% 0;
     font-weight: bold;
+    color: white;
 }
 /*Projects Component Styles*/
 .projects {
@@ -122,6 +124,7 @@ table {
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
+    color: white;
     margin: 3% 0 5%;
 }
 .project1, .project2, .project3, .project4, .project5, .project6 {
@@ -139,11 +142,15 @@ table {
 .description h3 {
     font-size: 1.5rem;
     margin-bottom: 1%;
+    color: white;
+}
+.description p {
+    font-size: 1.1rem;
 }
 .projectImg {
     box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
-    height: 100%;
+    height: 98%;
     width: 20%;
     background-repeat: no-repeat;
 }
