--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -170,8 +170,8 @@ table {
     background-size: cover;
 }
 #generic {
-    background-image: url('https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80');
-    background-position: 20% 50%;
+    background-image: url('./imgs/placeholder.png');
+    background-position: center;
     background-size: cover;
 }
 #pokeball {
@@ -183,9 +183,34 @@ table {
 .techStack {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
     margin: 0 15%;
-    padding: 0 2%;
+    padding: 2%;
     background-color: #003a61;
-    height: 400px;
+}
+.tileContainer {
+    border: 1px solid white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.tile {
+    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    height: 200px;
+    width: 200px;
+    background-repeat: no-repeat;
+    margin: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 0 0 5px black;
+}
+#javascript {
+    background-image: url('./imgs/javascript.png');
+    background-position: center;
+    background-size: cover;
 }
