--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -85,6 +85,7 @@ table {
     text-align: center;
     margin: 2% 0;
     font-weight: bold;
+    font-size: 2rem;
     color: white;
 }
 /*Qualities Component Styles*/
@@ -110,6 +111,7 @@ table {
     text-align: center;
     margin: 2% 0;
     font-weight: bold;
+    font-size: 2rem;
     color: white;
 }
 /*Projects Component Styles*/
@@ -140,12 +142,12 @@ table {
     width: 100%;
 }
 .description h3 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     margin-bottom: 1%;
     color: white;
 }
 .description p {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
 }
 .projectImg {
     box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
@@ -188,14 +190,19 @@ table {
     padding: 2%;
     background-color: #003a61;
 }
+.techStack h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    margin: 2% 0 5%;
+}
 .tileContainer {
-    border: 1px solid white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 .tile {
-    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     height: 200px;
     width: 200px;
@@ -205,7 +212,7 @@ table {
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bold;
     text-shadow: 0 0 5px black;
 }
@@ -213,4 +220,95 @@ table {
     background-image: url('./imgs/javascript.png');
     background-position: center;
     background-size: cover;
+}
+#HTML {
+    background-image: url('./imgs/html.png');
+    background-position: center;
+    background-size: 200px 208px;
+}
+#CSS {
+    background-image: url('./imgs/css.png');
+    background-position: center;
+    background-size: 200px 208px;
+}
+#react {
+    background-image: url('./imgs/react.png');
+    background-position: center;
+    background-size: 210px 200px;
+}
+#redux {
+    background-image: url('./imgs/redux.png');
+    background-position: center;
+    background-size: 180px 180px;
+    background-color: white;
+}
+#axios {
+    background-image: url('./imgs/axios.png');
+    background-position: center;
+    background-size: contain;
+    background-color: white;
+}
+#node {
+    background-image: url('./imgs/node.png');
+    background-position: center;
+    background-size: cover;
+}
+#express {
+    background-image: url('./imgs/express.png');
+    background-position: center;
+    background-size: 180px 180px;
+    background-color: white;
+}
+#sql {
+    background-image: url('./imgs/sql.png');
+    background-position: center;
+    background-size: cover;
+}
+#sqlite {
+    background-image: url('./imgs/sqlite.jpg');
+    background-position: center;
+    background-size: 220px 160px;
+    background-color: white;
+}
+#postgresql {
+    background-image: url('./imgs/postgresql.jpg');
+    background-position: center;
+    background-size: cover;
+    background-color: white;
+}
+#jest {
+    background-image: url('./imgs/jest.png');
+    background-position: center;
+    background-size: 280px 170px;
+    background-color: white;
+}
+#cypress {
+    background-image: url('./imgs/cypress.png');
+    background-position: center;
+    background-size: contain;
+    background-color: white;
+}
+#netlify {
+    background-image: url('./imgs/netlify.png');
+    background-position: center;
+    background-size: 170px 47px;
+    background-color: white;
+}
+#heroku {
+    background-image: url('./imgs/heroku.png');
+    background-position: center;
+    background-size: 300px 170px;
+    background-color: white;
+}
+#git {
+    background-image: url('./imgs/git.png');
+    background-position: center;
+    background-size: 175px 175px;
+    background-color: white;
+}
+#vscode {
+    background-image: url('./imgs/vscode.png');
+    background-position: center;
+    background-size: 195px 195px;
+    background-color: white;
 }
