--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -52,15 +52,50 @@ table {
 }
 /*Banner Component Styles*/
 .banner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    text-align: center;
     margin: 2% 15% 0;
-    padding: 0 2%;
+    padding: 2%;
     background-color: #002137;
-    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+.banner h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 2%;
+}
+.linkedin, .github {
+    border-radius: 10px;
+    box-shadow: 1px 3px 5px 3px rgba(0, 0, 0, 0.3);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: white;
+    padding-bottom: 2%;
+    height: 200px;
+    width: 40%;
+    opacity: 0.8;
+    transition: opacity 0.5s;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+}
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 0.8}
+}
+.linkedin {
+    background-image: url('./imgs/linkedinbanner.png');
+    background-size: 95%;
 
+}
+.github {
+    background-image: url('./imgs/github.jpg');
+    background-size: 60%;
+}
+.linkedin:hover, .github:hover {
+    opacity: 1;
+}
 /*Bio Component Styles*/
 .me {
     display: flex;
@@ -156,6 +191,9 @@ table {
     width: 20%;
     background-repeat: no-repeat;
 }
+.projectImg:hover {
+    box-shadow: 7px 7px 5px 3px rgba(0, 0, 0, 0.3);
+}
 #photoOfMe {
     background-image: url('./imgs/me.jpg');
     background-position: center;
@@ -171,7 +209,7 @@ table {
     background-position: left center;
     background-size: cover;
 }
-#generic {
+.generic {
     background-image: url('./imgs/placeholder.png');
     background-position: center;
     background-size: cover;
@@ -219,27 +257,31 @@ table {
 #javascript {
     background-image: url('./imgs/javascript.png');
     background-position: center;
-    background-size: cover;
+    background-size: 210px 160px;
+    background-color: white;
 }
 #HTML {
     background-image: url('./imgs/html.png');
     background-position: center;
-    background-size: 200px 208px;
+    background-size: 160px 168px;
+    background-color: white;
 }
 #CSS {
     background-image: url('./imgs/css.png');
     background-position: center;
-    background-size: 200px 208px;
+    background-size: 160px 168px;
+    background-color: white;
 }
 #react {
     background-image: url('./imgs/react.png');
     background-position: center;
-    background-size: 210px 200px;
+    background-size: contain;
+    background-color: white;
 }
 #redux {
     background-image: url('./imgs/redux.png');
     background-position: center;
-    background-size: 180px 180px;
+    background-size: 165px 150px;
     background-color: white;
 }
 #axios {
@@ -251,12 +293,13 @@ table {
 #node {
     background-image: url('./imgs/node.png');
     background-position: center;
-    background-size: cover;
+    background-size: contain;
+    background-color: white;
 }
 #express {
     background-image: url('./imgs/express.png');
     background-position: center;
-    background-size: 180px 180px;
+    background-size: 170px 170px;
     background-color: white;
 }
 #sql {
@@ -279,7 +322,7 @@ table {
 #jest {
     background-image: url('./imgs/jest.png');
     background-position: center;
-    background-size: 280px 170px;
+    background-size: 280px 160px;
     background-color: white;
 }
 #cypress {
@@ -297,7 +340,7 @@ table {
 #heroku {
     background-image: url('./imgs/heroku.png');
     background-position: center;
-    background-size: 300px 170px;
+    background-size: 300px 160px;
     background-color: white;
 }
 #git {
