--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -201,8 +201,8 @@ table {
 .projectImg:hover {
     box-shadow: 7px 7px 5px 3px rgba(0, 0, 0, 0.3);
 }
-#photoOfMe {
-    background-image: url('./imgs/me.jpg');
+#growing {
+    background-image: url('./imgs/growing.jpg');
     background-position: center;
     background-size: cover;
 }
