--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -64,7 +64,7 @@ table {
     width: 75%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 2% 0;
 }
 .banner h2 {
@@ -75,7 +75,7 @@ table {
 }
 .linkedin, .github {
     border-radius: 10px;
-    box-shadow: 1px 3px 5px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 3px 5px 3px black;
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
@@ -83,13 +83,36 @@ table {
     height: 200px;
     width: 40%;
     opacity: 0.8;
-    transition: opacity 0.5s;
-    animation-name: fadeIn;
-    animation-duration: 1s;
 }
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 0.8}
+.linkedin {
+    animation-name: linkedinSwitch;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: alternate;
+}
+.github {
+    animation-name: githubSwitch;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: alternate;
+}
+@keyframes linkedinSwitch {
+    0% {opacity: 0;}
+    10% {opacity: 0.8;}
+    40% {opacity: 0.8;}
+    50% {opacity: 0; width: 40%;}
+    50.1% {opacity: 0; width: 0;}
+    100% {opacity: 0; width: 0;}
+}
+@keyframes githubSwitch {
+    0% {opacity: 0; width: 0;}
+    49.9% {opacity: 0; width: 0;}
+    50% {opacity: 0; width: 40%;}
+    60% {opacity: 0.8;}
+    90% {opacity: 0.8;}
+    100% {opacity: 0;}
 }
 .linkedin {
     background-image: url('./imgs/linkedinbanner.png');
@@ -101,7 +124,7 @@ table {
     background-size: 60%;
 }
 .linkedin:hover, .github:hover {
-    opacity: 1;
+    box-shadow: 5px 7px 15px 3px black;
 }
 /*Bio Component Styles*/
 .me {
@@ -199,7 +222,7 @@ table {
     background-repeat: no-repeat;
 }
 .projectImg:hover {
-    box-shadow: 7px 7px 5px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 7px 7px 10px 3px rgba(0, 0, 0, 0.3);
 }
 #growing {
     background-image: url('./imgs/growing.jpg');
