--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ table {
 }
 /*Banner Component Styles*/
 .banner {
+    height: 250px;
     text-align: center;
     margin: 2% 15% 0;
     padding: 2%;
@@ -61,7 +62,8 @@ table {
     align-items: center;
 }
 .buttons {
-    width: 75%;
+    width: 30%;
+    height: 50%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -74,17 +76,19 @@ table {
     margin-bottom: 2%;
 }
 .linkedin, .github {
+    border: 1px solid white;
     border-radius: 10px;
     box-shadow: 1px 3px 5px 3px black;
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
-    padding-bottom: 2%;
-    height: 200px;
-    width: 40%;
+    height: 100%;
+    width: 100%;
     opacity: 0.8;
 }
 .linkedin {
+    background-image: url('./imgs/linkedinbanner.png');
+    background-size: 90%;
     animation-name: linkedinSwitch;
     animation-duration: 10s;
     animation-timing-function: linear;
@@ -92,6 +96,8 @@ table {
     animation-duration: alternate;
 }
 .github {
+    background-image: url('./imgs/github.jpg');
+    background-size: 60%;
     animation-name: githubSwitch;
     animation-duration: 10s;
     animation-timing-function: linear;
@@ -102,26 +108,17 @@ table {
     0% {opacity: 0;}
     10% {opacity: 0.8;}
     40% {opacity: 0.8;}
-    50% {opacity: 0; width: 40%;}
+    50% {opacity: 0; width: 100%;}
     50.1% {opacity: 0; width: 0;}
     100% {opacity: 0; width: 0;}
 }
 @keyframes githubSwitch {
     0% {opacity: 0; width: 0;}
     49.9% {opacity: 0; width: 0;}
-    50% {opacity: 0; width: 40%;}
+    50% {opacity: 0; width: 100%;}
     60% {opacity: 0.8;}
     90% {opacity: 0.8;}
     100% {opacity: 0;}
-}
-.linkedin {
-    background-image: url('./imgs/linkedinbanner.png');
-    background-size: 90%;
-
-}
-.github {
-    background-image: url('./imgs/github.jpg');
-    background-size: 80%;
 }
 .linkedin:hover, .github:hover {
     box-shadow: 5px 7px 15px 3px black;
@@ -163,7 +160,7 @@ table {
     background-color: #002e4e;
 }
 .hireMe img {
-    max-width: 35%;
+    width: 35%;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
 }
@@ -248,6 +245,7 @@ table {
     background-image: url('./imgs/Pokeball.jpeg');
     background-position: center;
     background-size: contain;
+    background-color: white;
 }
 /*TechStack Component Styles*/
 .techStack {
@@ -364,7 +362,13 @@ table {
 #netlify {
     background-image: url('./imgs/netlify.png');
     background-position: center;
-    background-size: 170px 47px;
+    background-size: 90%;
+    background-color: white;
+}
+#vercel {
+    background-image: url('./imgs/vercel.png');
+    background-position: center;
+    background-size: 90%;
     background-color: white;
 }
 #heroku {
@@ -384,4 +388,26 @@ table {
     background-position: center;
     background-size: 195px 195px;
     background-color: white;
+}
+@media (max-width: 1600px) {
+    .me, .hireMe, .projects, .techStack {
+        padding: 3% 3%;
+    }
+    .bio, .qualities {
+        font-size: 1.1rem;
+    }
+    .hireMe img {
+        width: 32%;
+    }
+    .description {
+        width: 70%;
+    }
+    .description p {
+        font-size: 1.1rem;
+    }
+    .tile {
+        height: 180px;
+        width: 180px;
+        font-size: 2.3rem;
+    }
 }
