--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ table {
 }
 .github {
     background-image: url('./imgs/github.jpg');
-    background-size: 60%;
+    background-size: 50%;
     animation-name: githubSwitch;
     animation-duration: 10s;
     animation-timing-function: linear;
@@ -139,7 +139,7 @@ table {
 
 }
 .bio {
-    max-width: 70%;
+    width: 70%;
     font-size: 1.3rem;
     margin-bottom: 2%;
 }
@@ -165,7 +165,7 @@ table {
     box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3);
 }
 .qualities {
-    max-width: 70%;
+    width: 70%;
     font-size: 1.3rem;
     line-height: 1.3;
 }
@@ -252,7 +252,7 @@ table {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0 15%;
+    margin: 0 15% 2%;
     padding: 2%;
     background-color: #003a61;
 }
@@ -285,78 +285,79 @@ table {
 #javascript {
     background-image: url('./imgs/javascript.png');
     background-position: center;
-    background-size: 210px 160px;
+    background-size: 100%;
     background-color: white;
 }
 #HTML {
     background-image: url('./imgs/html.png');
     background-position: center;
-    background-size: 160px 168px;
+    background-size: 75%;
     background-color: white;
 }
 #CSS {
     background-image: url('./imgs/css.png');
     background-position: center;
-    background-size: 160px 168px;
+    background-size: 75%;
     background-color: white;
 }
 #react {
     background-image: url('./imgs/react.png');
     background-position: center;
-    background-size: contain;
+    background-size: 100%;
     background-color: white;
 }
 #redux {
     background-image: url('./imgs/redux.png');
     background-position: center;
-    background-size: 165px 150px;
+    background-size: 85%;
     background-color: white;
 }
 #axios {
     background-image: url('./imgs/axios.png');
     background-position: center;
-    background-size: contain;
+    background-size: 95%;
     background-color: white;
 }
 #node {
     background-image: url('./imgs/node.png');
     background-position: center;
-    background-size: contain;
+    background-size: 100%;
     background-color: white;
 }
 #express {
     background-image: url('./imgs/express.png');
     background-position: center;
-    background-size: 170px 170px;
+    background-size: 85%;
     background-color: white;
 }
 #sql {
     background-image: url('./imgs/sql.png');
     background-position: center;
-    background-size: cover;
+    background-size: 210%;
+    background-color: white;
 }
 #sqlite {
     background-image: url('./imgs/sqlite.jpg');
     background-position: center;
-    background-size: 220px 160px;
+    background-size: 110%;
     background-color: white;
 }
 #postgresql {
     background-image: url('./imgs/postgresql.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: 90%;
     background-color: white;
 }
 #jest {
     background-image: url('./imgs/jest.png');
     background-position: center;
-    background-size: 280px 160px;
+    background-size: 140%;
     background-color: white;
 }
 #cypress {
     background-image: url('./imgs/cypress.png');
     background-position: center;
-    background-size: contain;
+    background-size: 95%;
     background-color: white;
 }
 #netlify {
@@ -374,40 +375,142 @@ table {
 #heroku {
     background-image: url('./imgs/heroku.png');
     background-position: center;
-    background-size: 300px 160px;
+    background-size: 140%;
     background-color: white;
 }
 #git {
     background-image: url('./imgs/git.png');
     background-position: center;
-    background-size: 175px 175px;
+    background-size: 80%;
     background-color: white;
 }
 #vscode {
     background-image: url('./imgs/vscode.png');
     background-position: center;
-    background-size: 195px 195px;
+    background-size: 90%;
     background-color: white;
 }
 @media (max-width: 1600px) {
-    .me, .hireMe, .projects, .techStack {
-        padding: 3% 3%;
+    .banner, .me, .hireMe, .projects, .techStack {
+        margin-left: 11%;
+        margin-right: 11%;
+        padding-left: 3%;
+        padding-right: 3%;
     }
-    .bio, .qualities {
-        font-size: 1.1rem;
+    .description {
+        width: 85%;
     }
-    .hireMe img {
-        width: 32%;
+}
+@media (max-width: 1400px) {
+    .banner, .me, .hireMe, .projects, .techStack {
+        margin-left: 7%;
+        margin-right: 7%;
+    }
+}
+@media (max-width: 1200px) {
+    .bio, .qualities, .description p, .techStack {
+        font-size: 1.15rem;
+    }
+    .tile {
+        height: 150px;
+        width: 150px;
+        font-size: 1.8rem;
+    }
+    .github {
+        background-size: 60%;
+    }
+}
+@media (max-width: 1000px) {
+    .banner, .me, .hireMe, .projects, .techStack {
+        margin: 0;
+    }
+    .bio, .qualities, .description p {
+        font-size: 1.05rem;
     }
     .description {
         width: 70%;
     }
-    .description p {
+}
+@media (max-width: 900px) {
+    .projectImg {
+        width: 23%;
+    }
+    .github {
+        background-size: 70%;
+    }
+}
+@media (max-width: 800px) {
+    .bio, .qualities, .description p {
+        font-size: 0.9rem;
+    }
+    .github {
+        background-size: 80%;
+    }
+    .projectImg {
+        width: 26%;
+    }
+}
+@media (max-width: 600px) {
+    .bio, .qualities, .description p {
+        font-size: 0.8rem;
+    }
+    .banner h2, .me h2, .hireMe h2, .projects h2, .techStack h2 {
+        font-size: 1.5rem;
+    }
+    .projectImg {
+        height: 75%;
+    }
+    .github {
+        background-size: 90%;
+    }
+    .banner {
+        height: 200px;
+    }
+}
+@media (max-width: 500px) {
+    .me, .hireMe {
+        flex-direction: column;
+    }
+    .bio {
+        width: 90%;
+    }
+    .qualities {
+        width: 90%;
+        margin-bottom: 5%;
+    }
+    .projectImg {
+        height: 60%;
+    }
+    .description h3 {
         font-size: 1.1rem;
     }
+    .github {
+        background-size: 100%;
+    }
     .tile {
-        height: 180px;
-        width: 180px;
-        font-size: 2.3rem;
+        height: 100px;
+        width: 100px;
+    }
+    .tileContainer h3 {
+        font-size: 1.2rem;
+    }
+}
+@media (max-width: 450px) {
+    .bio, .qualities, .description p {
+        font-size: 0.7rem;
+    }
+    .projectImg {
+        height: 50%;
+    }
+    .banner {
+        height: 150px;
+    }
+}
+@media (max-width: 380px) {
+    .projectImg {
+        height: 45%;
+    }
+    .project1, .project2 {
+        margin-bottom: 15%;
     }
 }
