--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,6 @@ table {
 	border-spacing: 0;
 }
 
-
 /*Standardized Styles*/
 .container {
     margin: 0 15%;
@@ -86,15 +85,29 @@ h2 {
 }
 .modal {
     position: fixed;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
-    height: 50%;
     border-radius: 10px;
-    background-color: #00406b;
+    background-color: #004b7dca;
     padding: 2%;
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
+}
+.closeButton {
+    align-self: flex-end;
+    background-color:rgba(255, 255, 255, 0.7);
+    border: none;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    text-decoration: none;
+    border-radius: 2px;
+    padding: 0.5% 1%;
+    font-weight: bold;
+}
+.modal p {
+    font-size: 2rem;
+    margin: 3% 2%;
 }
 .overlay {
     position: fixed;
@@ -106,12 +119,11 @@ h2 {
     z-index: 1000;
 }
 
-
 /*Banner Component Styles*/
 .banner {
     height: 250px;
     text-align: center;
-    background-color: #002945;
+    background-color: #002640;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,12 +183,13 @@ h2 {
 .linkedin:hover, .github:hover {
     box-shadow: 5px 7px 15px 3px black;
 }
+
 /*Bio Component Styles*/
 .me {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #002d4a;
+    background-color: #003050;
 }
 .me img {
     max-width: 25%;
@@ -189,6 +202,7 @@ h2 {
     font-size: 1.3rem;
     margin-bottom: 2%;
 }
+
 /*Qualities Component Styles*/
 .hireMe {
     display: flex;
@@ -207,12 +221,13 @@ h2 {
     font-size: 1.3rem;
     line-height: 1.3;
 }
+
 /*Projects Component Styles*/
 .projects {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: #00406b;
+    background-color: #003e67;
 }
 .projects h2 {
     margin-bottom: 5%;
@@ -223,7 +238,7 @@ h2 {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 2%;
-    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.5) inset;
+    box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.5) inset;
 }
 .projectTile {
     height: 225px;
@@ -253,12 +268,13 @@ h2 {
     background-position: center;
     background-size: cover;
 }
+
 /*TechStack Component Styles*/
 .techStack {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: #004b7d;
+    background-color: #004574;
 }
 .techStack h2 {
     margin-bottom: 5%;
